# matthieu25v6-desktop-v2

./: .env-example  .gitignore  Dockerfile.arm64  Dockerfile.x86_64  README.md  build-signed.ps1  doc.txt  docker-build.sh  docker-compose.arm64.yml  docker-compose.multi-arch.yml  docker-compose.x86_64.yml  index.html  package.json  pnpm-lock.yaml  release-notes.txt  snapcraft.yaml  vite.config.ts
.github/workflows/: cloud-publish-linux64-windows32-64-arm-mac.yaml  cloud-publish.yaml
.intlayer/config/: configuration.json
Prophet Kacou.itmsp/: metadata.xml
keys/apple/: AuthKey_6334D6K6GC.p8  AuthKey_8V37C4L378.p8  AuthKey_8V37C4L378_base64.txt
keys/updater/: myupdaterapp.key  myupdaterapp.key.pub
microsoft/.tauri/: myapp.key  myapp.key.pub
src/: App.tsx  index.css  main.tsx  routeTree.gen.ts  translation.ts
src-tauri/: Cargo.toml  Entitlements-appstore.plist  Entitlements-local.plist  Entitlements.plist  Info.plist  snapcraft.yaml  tauri.apple.conf.json  tauri.conf.json  tauri.offlineappstore.conf.json  tauri.onlineappstore.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/libs/sqlite_blob_reader/: Cargo.toml
src-tauri/libs/sqlite_blob_reader/src/: lib.rs
src-tauri/profiles/: Prophet_Kacou.provisionprofile  Prophet_Kacou_Developper_Id.provisionprofile  Prophet_Kacou_Mac_App_Store_Connect.provisionprofile
src-tauri/src/: download.rs  lib.rs  main.rs
src/components/buttons/: download-button.tsx  listen-button.tsx  manual-player.tsx  player-button.tsx  print-button.tsx
src/components/commons/: app-sidebar.tsx  app-updater.tsx  dashboard.tsx  download-history.tsx  hheme-toggle-button.tsx  langue-dropdown.tsx  nav-user.tsx  render-html-to-pdf.tsx  search-drawer.tsx  select-with-search.tsx  text-font-sizebar.tsx  update-bar.tsx
src/components/dialog/: display-alert.tsx  download-progress-modal.tsx  fullscreen-image-modal.tsx  leader-modal.tsx  show-photo.tsx  show-video.tsx  song-modal.tsx
src/components/images/: list-photo.tsx  pagination-data.tsx  photo-card.tsx
src/components/landing/: image-section.tsx
src/components/loaders/: page-loader.tsx
src/components/sermons/: sermon-header.tsx  sermon-item.tsx  sermon-printer.tsx  sermon-sidebar.tsx
src/components/tables/assemblies/: assemblies-columns.tsx  (+1 more)
src/components/ui/: button.tsx  sidebar.tsx
src/components/videos/: list-video.tsx  video-card.tsx  youtube-embed.tsx
src/context/: audio-player-context.tsx  download-history-context.tsx  langue-context.tsx  sermon-context.tsx
src/hooks/: use-online-status.ts  use-updater.ts  useAlbums.ts  useAssemblies.ts  useCities.ts  useCountries.ts  useSongs.ts
src/lib/: alert-confirm-options.ts  database.ts  download-history.ts  env.ts  menu.ts  resources.ts  utils.ts
src/lib/resources/: album.ts  assembly.ts  base.ts  biography.ts  book.ts  brother.ts  city.ts  country.ts  information.ts  langue.ts  photo.ts  sermon.ts  song.ts  video.ts
src/locales/: ar.json  de.json  en.json  es.json  fa.json  fr.json  hi.json  id.json  it.json  ja.json  nl.json  no.json  pl.json  pt.json  ro.json  ru.json  ta.json  tr.json  zh.json
src/routes/: __root.tsx  assemblees.tsx  biographies.tsx  hymns.tsx  index.tsx  landing.tsx  photos.tsx  sermons.tsx  videos.tsx
src/schemas/: album.ts  assembly.ts  biography.ts  brother.ts  city.ts  country.ts  event.ts  langue.ts  model-ref.ts  photo.ts  sermon.ts  song.ts  video.ts
ssh/: mac-online-deploy.sh  windows-online-deploy.bat
(+8 files in other folders)
